
	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------
	
master	UNRELEASED
	2020-04-30
	* Remove the trio library from the distribution.

1.2.5	2019-10-11
	* Release bogofilter 1.2.5.

1.2.5.RC1
	2019-09-08
	* Release candidate #1 for bogofilter 1.2.5.
	* Add a file "OBITUARY" to inform the bogofilter community
	  that and how David M. Relson has passed away in 2013.
	* Matthias Andree has been maintainer since.

	2019-08-04
	* Const-ness fix initiated for KyotoCabinet driver (fixing a const
	  qualifier warning there) also improves performance in some
	  "full-database" operations for LMDB and SQLite3, through reduced
	  memory allocation and copy operations.

	2019-06-21
	* Plugged more memory leaks (one-shot leaks in bogoutil/bogotune).
	* RPMs or scripts for static library builds have been removed.
	  Bogofilter no longer supports systems that are too far out of date.
	  This removes .spec files from the package (for now, it is still
	  built during ./configure), disables "make rpm", and drops the
	  install-staticdblibs.sh script, and removes "--enable-static"
	  support from ./configure.

	2019-05-19
	* Bogofilter's source code repository has been converted to Git,
	  and is hosted on GitLab and mirrored onto SourceForge.net.
	  In contrast to Subversion (SVN), the prior system, Git is
	  a distributed open-source version control system and has
	  gained a lot of ground over the past years, and is solid and
	  scales well.

	2018-07-19
	* Support for using LMDB (Lightning Memory-Mapped Database Manager)
	  as the database back-end. Suggested, courteously implemented and
	  contributed by Steffen Nurpmeso, steffen .at. sdaoden.eu.

	2018-07-17